--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
     "vite-plugin-inspect": "^0.8.3",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -30,6 +31,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "less": "^4.2.0",
     "prettier": "^3.2.5",
     "vite": "^5.2.8"
   }
