--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "main": "./ui/lib/index.js",
-  "module": "./ui/es/index.js",
+  "main": "./ui/lib/src/components/index.js",
+  "module": "./ui/es/src/components/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
